<resources>
    <string name="app_name">케어쉽</string>

    <!-- Common -->
    <string name="elder">어르신</string>
    <string name="guardian">보호자</string>
    <string name="voice_record">음성 메시지 전송</string>
    <string name="pedometer">만보기 측정</string>
    <string name="user_code">사용자 코드</string>
    <string name="connect">연결하기</string>
    <string name="cancel">취소</string>
    <string name="quit">나가기</string>
    <string name="schedule">일정</string>
    <string name="schedule_title">제목</string>
    <string name="schedule_time">시간</string>
    <string name="schedule_all_day">종일</string>
    <string name="start">시작</string>
    <string name="end">종료</string>
    <string name="change">수정</string>
    <string name="delete">삭제</string>
    <string name="save">저장</string>
    <string name="update">새로 고침</string>
    <string name="logout">로그아웃</string>
    <string name="logout_underline"><u>로그아웃</u></string>

    <string name="dialog_check">확인</string>

    <!-- Notification -->
    <string name="caresheep_gps_foreground_service_channel">위치 추적</string>
    <string name="caresheep_gps_foreground_service_channel_description">보호자에게 어르신의 실시간 위치 정보를 제공합니다.</string>
    <string name="caresheep_gps_foreground_service_cancel">서비스 종료</string>


    <!-- Start -->
    <string name="start_look_around">둘러보기</string>
    <string name="start_app_intro">어르신과 보호자를 위한 \n맞춤형 일상 케어</string>
    <string name="start_sign_in_with_google">구글로 시작하기</string>

    <!-- Sign Up -->
    <string name="sign_up_my_info">내 정보 입력</string>
    <string name="sign_up_user_type_title">서비스 이용 유형을 \n선택하세요</string>
    <string name="sign_up_user_type_sub_title">유형에 맞는 서비스를 제공합니다!</string>
    <string name="sign_up_next">다음</string>
    <string name="sign_up_user_name_title">이름을 \n입력해주세요</string>
    <string name="sign_up_user_name_sub_title">프로필에 등록될 이름입니다.</string>
    <string name="sign_up_user_name">이름</string>
    <string name="sign_up_user_gender_title">성별을 \n입력해주세요</string>
    <string name="sign_up_user_gender_sub_title">앱에서 다뤄질 정보입니다.</string>
    <string name="sign_up_user_gender_male">남성</string>
    <string name="sign_up_user_gender_female">여성</string>
    <string name="sign_up_user_age_title">나이를 \n입력해주세요</string>
    <string name="sign_up_user_age_sub_title">앱에서 다뤄질 정보입니다.</string>
    <string name="sign_up_user_age">나이</string>
    <string name="sign_up_complete">완료</string>
    <string name="sign_up_complete_message">회원가입이 완료되었습니다!</string>
    <string name="sign_up_quit_title">회원가입을 그만두시겠습니까?</string>
    <string name="sign_up_quit_caption">그만두시면 처음부터 회원가입을 해야 합니다</string>
    <string name="sign_up_continue">계속하기</string>
    <string name="sign_up_drop">나가기</string>

    <!-- Guardian -->
    <string name="guardian_home">홈</string>
    <string name="guardian_calendar">공유 캘린더</string>
    <string name="guardian_my_page">마이페이지</string>
    <string name="guardian_analysis_result">생활 분석</string>
    <string name="guardian_today_schedule">오늘의 일정</string>
    <string name="guardian_voice_mailbox">음성 사서함</string>
    <string name="guardian_analysis_result_caption">어르신 리포트 확인하러 가기</string>

    <!-- Guardian - Home -->
    <string name="guardian_home_elder_report_title">어르신 건강 리포트 확인하기</string>
    <string name="guardian_home_elder_report_sub_title">지난 생활 기록을 살펴보세요</string>
    <string name="guardian_home_voice_mailbox_title">어르신의 메시지 보기</string>
    <string name="guardian_home_voice_mailbox_sub_title">새로운 메시지를 확인하세요</string>
    <string name="guardian_home_today_schedule_not_exist_message">아직 등록된 일정이 없습니다.</string>

    <!-- Guardian - Report -->
    <string name="guardian_week_report_detail">주간 리포트 상세내역</string>
    <string name="guardian_week_report_breakfast_routine_rate">주간 아침 식사 루틴 이행률</string>
    <string name="guardian_week_report_launch_routine_rate">주간 점심 식사 루틴 이행률</string>
    <string name="guardian_week_report_dinner_routine_rate">주간 저녁 식사 루틴 이행률</string>
    <string name="guardian_report_breakfast">아침 식사</string>
    <string name="guardian_report_launch">점심 식사</string>
    <string name="guardian_report_dinner">저녁 식사</string>
    <string name="guardian_report_breakfast_recommend">오늘의 아침 식단 추천</string>
    <string name="guardian_report_launch_recommend">오늘의 점심 식단 추천</string>
    <string name="guardian_report_dinner_recommend">오늘의 저녁 식단 추천</string>
    <string name="guardian_report_breakfast_routine_recommend">어르신 아침 식사 루틴 추천</string>
    <string name="guardian_report_launch_routine_recommend">어르신 점심 식사 루틴 추천</string>
    <string name="guardian_report_dinner_routine_recommend">어르신 저녁 식사 루틴 추천</string>

    <string name="guardian_report_meal_recommend_title">어르신의 질병명을 입력해주세요.</string>
    <string name="guardian_report_meal_recommend_caption">질병이 없다면 입력 없이 추천 버튼을 눌러주세요.</string>
    <string name="guardian_report_meal_recommend_continue">식단 추천</string>

    <string name="guardian_elder_meal_recommend">어르신 식단 추천</string>

    <string name="mon">월</string>
    <string name="tue">화</string>
    <string name="wed">수</string>
    <string name="thu">목</string>
    <string name="fri">금</string>
    <string name="sat">토</string>
    <string name="sun">일</string>

    <!-- Guardian - Calendar -->
    <string name="guardian_calendar_add_schedule">일정 추가</string>
    <string name="guardian_calendar_schedule_title_error">제목을 입력해주세요.</string>
    <string name="guardian_calendar_schedule_alarm_default">10분 전</string>
    <string name="guardian_calendar_schedule_repeat_default">반복 안 함</string>
    <string name="guardian_calendar_schedule_memo">메모</string>
    <string name="guardian_calendar_schedule_notification">알림</string>
    <string name="guardian_calendar_schedule_notification_none">알림 없음</string>
    <string name="guardian_calendar_schedule_notification_start">일정 시작시간</string>
    <string name="guardian_calendar_schedule_notification_minute">10분 전</string>
    <string name="guardian_calendar_schedule_notification_hour">1시간 전</string>
    <string name="guardian_calendar_schedule_notification_day">1일 전</string>
    <string name="guardian_calendar_schedule_repeat">반복</string>
    <string name="guardian_calendar_schedule_repeat_none">반복 안 함</string>
    <string name="guardian_calendar_schedule_repeat_day">매일</string>
    <string name="guardian_calendar_schedule_repeat_week">매주</string>
    <string name="guardian_calendar_schedule_repeat_month">매월</string>
    <string name="guardian_calendar_schedule_repeat_year">매년</string>

    <!-- Guardian - MyPage -->
    <string name="guardian_my_page_routine_info">어르신 루틴 정보</string>
    <string name="guardian_my_page_connect_elder">어르신 연결하기</string>
    <string name="guardian_my_page_emergency_elder">어르신 긴급 상황 전화</string>
    <string name="guardian_my_page_dementia_elder">치매 어르신 설정</string>
    <string name="guardian_my_page_connect_title">사용자 코드를 \n입력하세요</string>
    <string name="guardian_my_page_connect_sub_title">어르신과의 연동을 위해 필요합니다.</string>
    <string name="guardian_my_page_connect_qr_code_scan">QR코드 스캔</string>
    <string name="guardian_my_page_connect_way_info_title">연결 방법</string>
    <string name="guardian_my_page_connect_way_info_detail">1. 어르신 앱 실행\n2. 어르신 앱 메인 화면 우측 상단 연결 버튼 클릭\n3. 버튼 클릭 시 나타나는 QR코드 스캔 또는\n     직접 사용자 코드 입력</string>
    <string name="guardian_my_page_connect_elder_caption">아래 버튼을 통해 연결 또는 취소를 진행하세요</string>
    <string name="guardian_my_page_connect_not_exist_message">해당 사용자 코드를 가진 \n어르신이 없습니다</string>
    <string name="guardian_my_page_account_management">계정 관리</string>

    <!-- Guardian - MyPage - 어르신 루틴 설정 -->
    <string name="walk">걷기</string>
    <string name="edit">수정하기</string>
    <string name="walk_goal">목표 걸음 수:</string>
    <string name="meal">식사</string>
    <string name="morning">아침</string>
    <string name="lunch">점심</string>
    <string name="dinner">저녁</string>
    <string name="take_medicine">복약</string>
    <string name="red_medicine">빨강</string>
    <string name="yellow_medicine">노랑</string>
    <string name="green_medicine">초록</string>
    <string name="blue_medicine">파랑</string>
    <string name="purple_medicine">보라</string>
    <string name="brown_medicine">갈색</string>
    <string name="black_medicine">검정</string>

    <!-- Guardian - Map -->
    <string name="guardian_maps_gps_tracking">어르신 위치 추적</string>
    <string name="guardian_maps_address_not_available">주소를 가져 올 수 없습니다.</string>

    <!-- Guardian - Voice -->
    <string name="guardian_voice_detail">녹음 상세 내용</string>
    <string name="guardian_voice_detail_date">날짜</string>
    <string name="guardian_voice_situation_type">상황 유형</string>
    <string name="guardian_voice_detail_content">음성 내용</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Elder -->
    <string name="elder_today_schedule">오늘의 일정</string>
    <string name="elder_main_caption">원하는 서비스를 선택하세요</string>

    <!-- Elder - Connect -->
    <string name="elder_connect">보호자 연결</string>
    <string name="elder_connect_user_code_message_1">보호자와 연결하기 위해</string>
    <string name="elder_connect_user_code_message_2">보호자 휴대폰의</string>
    <string name="elder_connect_user_code_message_3">케어쉽 앱</string>
    <string name="elder_connect_user_code_message_4">에서</string>
    <string name="elder_connect_user_code_message_5">QR코드를 스캔</string>
    <string name="elder_connect_user_code_message_6">하거나</string>
    <string name="elder_connect_user_code_message_7">사용자 코드를 입력</string>
    <string name="elder_connect_user_code_message_8">합니다.</string>

    <string name="elder_connect_connected_guardian">연결된 보호자</string>
    <string name="elder_connect_not_exist_guardian">연결된 보호자가 없습니다.</string>
    <string name="elder_connected_guardian_list">연결된 보호자 목록</string>
    <string name="title_activity_guardian_set_elder_emergency_time">
        GuardianSetElderEmergencyTimeActivity
    </string>

</resources>