<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <item
        android:id="@+id/homeFragment"
        android:enabled="true"
        android:icon="@drawable/selector_bnv_home"
        android:title="@string/guardian_home"
        app:showAsAction="always"
        tools:ignore="AlwaysShowAction" />

    <item
        android:id="@+id/calendarFragment"
        android:icon="@drawable/selector_bnv_calendar"
        android:title="@string/guardian_calendar"
        app:showAsAction="always" />

    <item
        android:id="@+id/myPageFragment"
        android:icon="@drawable/selector_bnv_mypage"
        android:title="@string/guardian_my_page"
        app:showAsAction="always" />

</menu>