<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.guardian.mypage.GuardianConnectActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_top"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_back" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Title4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/guardian_my_page_connect_elder" />

    </androidx.appcompat.widget.Toolbar>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_connect_elder_title"
        style="@style/Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="4sp"
        android:text="@string/guardian_my_page_connect_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_top" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_connect_elder_sub_title"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="10dp"
        android:text="@string/guardian_my_page_connect_sub_title"
        android:textColor="@color/gray_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_connect_elder_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_code_et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="35dp"
        android:text="@string/user_code"
        app:layout_constraintStart_toStartOf="@+id/et_user_code"
        app:layout_constraintTop_toBottomOf="@+id/tv_connect_elder_sub_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_code"
        style="@style/Text.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/et_sign_up"
        android:hint="예) 123456"
        android:inputType="number"
        android:lines="1"
        android:maxLength="6"
        android:paddingHorizontal="18dp"
        android:paddingVertical="16dp"
        android:textColorHint="@color/gray_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_code_et_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_qr_user_code"
        style="@style/Text.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="8dp"
        android:background="@drawable/rectangle_white_border_gray500_radius_30"
        android:fontFamily="@font/pretendard_bold"
        android:minHeight="0dp"
        android:paddingHorizontal="14dp"
        android:paddingVertical="8dp"
        android:text="@string/guardian_my_page_connect_qr_code_scan"
        android:textColor="@color/gray_900"
        app:layout_constraintBottom_toBottomOf="@+id/et_user_code"
        app:layout_constraintEnd_toEndOf="@+id/et_user_code"
        app:layout_constraintTop_toTopOf="@+id/et_user_code" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_connect_way_info"
        style="@style/Text.Title4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/pretendard_semi_bold"
        android:text="@string/guardian_my_page_connect_way_info_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_user_code" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_connect_way_info_detail"
        style="@style/Text.Body2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/guardian_my_page_connect_way_info_detail"
        app:layout_constraintStart_toStartOf="@+id/tv_connect_way_info"
        app:layout_constraintTop_toBottomOf="@+id/tv_connect_way_info" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_connect"
        style="@style/Text.Title4"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_sign_up"
        android:enabled="false"
        android:fontFamily="@font/pretendard_bold"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/connect"
        android:textColor="@drawable/selector_next_btn_text_color"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>