<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/dialog_bg"
    android:paddingBottom="26dp">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_vertical_title"
        style="@style/Text.Dialog.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:fontFamily="@font/pretendard_bold"
        android:text="@string/sign_up_quit_title"
        android:textColor="@color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_vertical_caption"
        style="@style/Text.Body3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:text="@string/sign_up_quit_caption"
        android:textColor="@color/gray_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vertical_title" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_continue"
        style="@style/Text.Dialog.Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/rectangle_green_radius_20"
        android:paddingVertical="14dp"
        android:text="@string/sign_up_continue"
        android:textColor="@color/white"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_vertical_caption" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_quit"
        style="@style/Text.Dialog.Btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="11dp"
        android:background="@drawable/rectangle_white_border_gray500_radius_20"
        android:paddingVertical="14dp"
        android:text="@string/sign_up_drop"
        android:textColor="@color/gray_700"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_continue" />

</androidx.constraintlayout.widget.ConstraintLayout>