<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".elder.connect.ElderConnectActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/tb_top"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:paddingHorizontal="20dp"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_close_30" />

        <androidx.appcompat.widget.AppCompatTextView
            style="@style/Text.Title1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/elder_connect" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:overScrollMode="ifContentScrolls"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tb_top">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="40dp">

            <androidx.appcompat.widget.AppCompatImageView
                android:id="@+id/iv_qr_user_code"
                android:layout_width="wrap_content"
                android:cropToPadding="true"
                android:layout_height="wrap_content"
                android:padding="8dp"
                android:layout_marginTop="40dp"
                android:background="@drawable/rectangle_white_border_olive_8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_code_caption_1"
                style="@style/Text.Title4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="14dp"
                android:text="@string/elder_connect_user_code_message_1"
                android:textAlignment="center"
                android:textColor="@color/gray_900"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/iv_qr_user_code" />

            <LinearLayout
                android:id="@+id/ll_user_code_caption_first"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_code_caption_1">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_2"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elder_connect_user_code_message_2"
                    android:textAlignment="textEnd"
                    android:textColor="@color/gray_900" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_3"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/elder_connect_user_code_message_3"
                    android:textColor="@color/olive" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_4"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elder_connect_user_code_message_4"
                    android:textAlignment="textStart"
                    android:textColor="@color/gray_900" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user_code_caption_second"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_user_code_caption_first">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_5"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/elder_connect_user_code_message_5"
                    android:textAlignment="textEnd"
                    android:textColor="@color/olive" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_6"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elder_connect_user_code_message_6"
                    android:textColor="@color/gray_900" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/ll_user_code_caption_last"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="2dp"
                android:gravity="center"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_user_code_caption_second">

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_7"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/pretendard_bold"
                    android:text="@string/elder_connect_user_code_message_7"
                    android:textAlignment="textEnd"
                    android:textColor="@color/olive" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/tv_user_code_caption_8"
                    style="@style/Text.Title4"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/elder_connect_user_code_message_8"
                    android:textColor="@color/gray_900" />

            </LinearLayout>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_code_title"
                style="@style/Text.Title2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="40dp"
                android:text="@string/user_code"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_user_code_caption_last" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tv_user_code"
                style="@style/Text.Title3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rectangle_green_transp_40_radius_30"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:paddingVertical="24dp"
                app:layout_constraintStart_toStartOf="@+id/tv_user_code_title"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_code_title" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_connected_guardian_list"
                style="@style/Text.Title3"
                android:layout_width="0dp"
                android:layout_marginTop="50dp"
                android:layout_height="60dp"
                android:layout_marginHorizontal="20dp"
                app:layout_constraintTop_toBottomOf="@+id/tv_user_code"
                android:background="@drawable/rectangle_green_radius_30"
                android:fontFamily="@font/pretendard_bold"
                android:gravity="center"
                android:stateListAnimator="@null"
                android:text="@string/elder_connected_guardian_list"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>