<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserNameFragment">

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name_title"
        style="@style/Text.Title1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="20dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/sign_up_user_name_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name_sub_title"
        style="@style/Text.Body1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="22dp"
        android:layout_marginTop="12dp"
        android:lineSpacingExtra="6sp"
        android:text="@string/sign_up_user_name_sub_title"
        android:textColor="@color/gray_600"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_title" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_user_name_et_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="35dp"
        android:text="@string/sign_up_user_name"
        app:layout_constraintStart_toStartOf="@+id/et_user_name"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_sub_title" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/et_user_name"
        style="@style/Text.Body1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/et_sign_up"
        android:hint="예) 홍길동"
        android:paddingVertical="16dp"
        android:paddingHorizontal="18dp"
        android:textColorHint="@color/gray_500"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_user_name_et_title" />

    <androidx.appcompat.widget.AppCompatButton
        style="@style/Text.Title3"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/btn_sign_up"
        android:enabled="false"
        android:gravity="center"
        android:stateListAnimator="@null"
        android:text="@string/sign_up_next"
        android:textColor="@color/gray_700"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>